RECOVERY POINT: i18n works

--- a/src/main/resources/myProp_en.properties
+++ b/src/main/resources/myProp_en.properties
@@ -2,6 +2,8 @@ titulo.pagina.inicio=Library - Home
 biblioteca.inicio=Library
 registro=Register
 login=Login
+saludo=Hi,
+cerrar.sesion=Log out
 titulo.lista.libros=List of Books
 mensaje.sin.libros=There are no books available in the list
 isbn=ISBN
